--- a/index.html
+++ b/index.html
@@ -5,16 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/addons/p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
 
 
     <title> Vigyaan - Music Project</title>
-
-    <style>
-        @media only screen and (min-width: 600px) {}
-
-    </style>
 
 </head>
 
