--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </canvas>
 
     <div id="titleDiv">
-        <h1 id="mainTitle"></h1>
+        <h1 id="mainTitle">MUSICATION</h1>
     </div>
 
     <div id="buttonsDiv">
