Add styling to the button and the title

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
 
     <div id="buttonsDiv">
-
+    <button id="aboutMe" onclick="window.location.href='aboutMe.html'">About Me</button>
     </div>
 
 </body>
