--- a/practice.html
+++ b/practice.html
@@ -7,10 +7,7 @@
 
     <title>Musication</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.49/Tone.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@tonejs/midi@2.0.28/dist/midi.min.js"></script>
-    <!--
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/p5.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/s/p5.js/1.9.0/addons/p5.sound.min.js"></script>-->
+    <script src="https://unpkg.com/@tonejs/midi@2.0.28/build/midi.js"></script>
 
     <link rel="stylesheet" type="text/css" href="style.css">
 
@@ -20,20 +17,29 @@
             /* Your CSS for wider screens */
         }
 
-        /* Add a quick style here to make sure the playbutton is always visible for testing */
-        #playbutton {
-            z-index: 100; /* Make sure it's above everything else */
-            margin-top: 100px; /* Push it down below the fixed header for visibility */
-            padding: 15px 30px; /* Give it size */
-            background-color: #ff6b6b; /* Make it clearly visible */
+        /* Style for the button (standardizing on #playBTN) */
+        #playBTN { /* Changed from #playbutton to #playBTN */
+            z-index: 100;
+            margin-top: 100px;
+            padding: 15px 30px;
+            background-color: #ff6b6b;
             color: white;
             border-radius: 5px;
             cursor: pointer;
             font-size: 1rem;
-            display: block; /* Ensure it takes up space */
-            margin-left: auto; /* Center it */
-            margin-right: auto; /* Center it */
-            margin-bottom: 25px; /* Add space below it */
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            margin-bottom: 25px;
+        }
+
+        /* Basic style for the status div */
+        #status {
+            text-align: center;
+            font-size: 1.1em;
+            color: #555;
+            margin-top: 10px;
+            padding: 5px;
         }
     </style>
 
@@ -53,16 +59,12 @@
 
     <canvas id="backgroundSketch"></canvas>
 
-
-
     <div id="buttonsDiv">
-        <button id="playbutton">Play Music</button>
+        <button id="playBTN">Play Music</button>
+        <div id="status">Loading...</div>
     </div>
 
-
     <script src="practice.js"></script>
-    <!--<script type="module" src="practice.js"></script>-->
 
 </body>
-
 </html>
