--- a/sound-test.html
+++ b/sound-test.html
@@ -143,7 +143,7 @@
     </script>
 
     <!-- Your sound-test.js file -->
-    <script src="sound-test.js"></script>
+    <script type="module" src="sound-test.js"></script>
 </body>
 </html>
 <body>
