Remove all pitch detection

--- a/sound-test.html
+++ b/sound-test.html
@@ -77,6 +77,6 @@
   </script>
 
   <!-- ✅ Load your module script ONCE -->
-  <script type="module" src="sound-test.js"></script>
+  <script src="sound-test.js"></script>
 </body>
 </html>
